# ascii-video-filter

./: .gitignore  AsciiVideoFilter  CMakeLists.txt  Makefile  \  allout.txt  cmake_install.cmake  main.cpp  valgrind_full_output.txt
.cache/clangd/index/: main.cpp.BEA0FF054CA60F64.idx
src/: Application.cpp  Application.h  Application.hpp  AsciiConverter.cpp  AsciiConverter.h  AsciiConverter.hpp  AsciiRenderer.cpp  AsciiRenderer.h  AsciiRenderer.hpp  AsciiTypes.h  ThreadSafeQueue.hpp  Utils.cpp  Utils.h  Utils.hpp  VideoDecoder.cpp  VideoDecoder.h  VideoDecoder.hpp  VideoEncoder.cpp  VideoEncoder.hpp
tests/: test_basic_types.cpp  test_decoder.cpp
